Transfer more functionality to module

--- a/pyOptLE test.ipynb
+++ b/pyOptLE test.ipynb
@@ -34,8 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate = False\n",
-    "dt = 0.1\n",
     "RT = 1.\n",
     "beta = 1/RT\n",
     "\n",
@@ -43,56 +41,29 @@
     "\n",
     "##############################\n",
     "\n",
+    "generate = False\n",
+    "\n",
     "if generate:\n",
-    "\n",
-    "    n = 50   # num traj\n",
-    "    N = 1000 # traj length\n",
-    "    D = .1\n",
-    "    \n",
-    "    k = 10.0\n",
-    "    def V(q):\n",
-    "        return 0.5 * k * (q**2)\n",
-    "    def nablaV(q):\n",
-    "        return k * q\n",
-    "    \n",
-    "    np.random.seed(1)\n",
-    "\n",
-    "    # Start out of equilibrium\n",
-    "    q = np.zeros([n, N])\n",
-    "\n",
-    "    q[:,0] = np.zeros(n) + np.random.normal(0, np.sqrt(2.*D*dt), size=n)\n",
-    "    for t in range(1,N):\n",
-    "        q[:,t] = q[:,t-1] - beta * D * nablaV(q[:,t-1]) * dt + np.random.normal(0, np.sqrt(2.*D*dt), size=n)\n",
-    "\n",
-    "\n",
-    "if not generate:\n",
-    "\n",
+    "    dt = 0.1\n",
+    "    D = 0.5\n",
+    "    beta = 1\n",
+    "    n = 50\n",
+    "    N = 1000\n",
+    "#     V = optle.harmonic_V\n",
+    "#     nablaV = optle.harmonic_nablaV\n",
+    "    V = optle.V_dblwell\n",
+    "    nablaV = optle.nablaV_dblwell\n",
+    "    q = optle.overdamped_Langevin(n, N, dt, beta, D, nablaV)\n",
+    "    f = np.zeros_like(q)\n",
+    "else:\n",
     "    # format data from \"real\" simulation\n",
-    "    raw = np.loadtxt('data/dblwl_abmd/biased/dblwl_h7_k05_g10_abmd')\n",
+    "    filename = 'data/'\n",
     "    \n",
-    "    t = 0\n",
-    "    old_t = 0\n",
-    "    q = list()\n",
-    "    f = list()\n",
-    "    qi = list()\n",
-    "    fi = list()\n",
+    "    q, f = optle.load_traj(filename)\n",
     "\n",
-    "    # N = list()\n",
-    "    for r in raw:\n",
-    "        if r[0] < old_t:\n",
-    "            # print(i)\n",
-    "            # N.append(i)\n",
-    "            q.append(np.array(qi))\n",
-    "            f.append(np.array(fi))\n",
-    "            qi = list()\n",
-    "            fi = list()\n",
-    "\n",
-    "        qi.append(r[1])\n",
-    "        fi.append(r[2])\n",
-    "        old_t = r[0]\n",
-    "\n",
-    "    plt.plot([qi.shape[0] for qi in q])\n",
-    "    # q = raw[:N*n,1].reshape([N, n])"
+    "plt.plot([qi.shape[0] for qi in q])\n",
+    "plt.xlabel('Trajectory index')\n",
+    "plt.ylabel('N. of pts per trajectory')\n"
    ]
   },
   {
@@ -116,9 +87,8 @@
     "\n",
     "knots = np.linspace(qmin, qmax, n_knots)\n",
     "\n",
-    "# Initial guess for the parameters\n",
-    "D = .1\n",
-    "initial_params = np.concatenate((np.zeros(n_knots), np.zeros(n_knots) + D))\n"
+    "# Initial guess for the parameters: zero free energy gradient, constant D = 1\n",
+    "initial_params = np.concatenate((np.zeros(n_knots), np.zeros(n_knots) + 1.))\n"
    ]
   },
   {
@@ -128,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_params"
+    "%autoreload"
    ]
   },
   {
@@ -139,11 +109,11 @@
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
-    "print(optle.objective(initial_params, q, deltaq, f, knots))\n",
+    "print(optle.objective_order1_debiased(initial_params, knots, q, deltaq, dt, beta, f))\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "start_time = time.time()\n",
-    "print(optle.objective(initial_params, q, deltaq, f, knots))\n",
+    "print(optle.objective_order1_debiased(initial_params, knots, q, deltaq, dt, beta, f))\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
@@ -166,7 +136,7 @@
     "\n",
     "start_time = time.time()\n",
     "# Minimize the objective function using L-BFGS-B algorithm\n",
-    "result = minimize(optle.objective, initial_params,  args=(q, deltaq, f, knots), jac=True, method='L-BFGS-B', callback=history)\n",
+    "result = minimize(optle.objective_order1_debiased, initial_params,  args=(knots, q, deltaq, dt, beta, f), jac=True, method='L-BFGS-B', callback=history)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "print(result.nit, result.message)"
@@ -211,12 +181,17 @@
     "plt.plot(x, predicted, label='Optimized free energy')\n",
     "plt.xlabel('colvar q')\n",
     "plt.ylabel('Free energy')\n",
-    "plt.legend()\n",
     "\n",
     "if generate:\n",
-    "    plt.scatter(x, V(x), label='True potential')\n",
-    "    plt.legend()\n",
+    "    plt.plot(x, V(x) - np.min(V(x)), label='True potential')\n",
     "\n",
+    "# Ad hoc bc we know this is a double well\n",
+    "plt.plot(x, optle.V_dblwell(x) - np.min(optle.V_dblwell(x)), label='Double well')\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "    \n",
+    "    \n",
     "plt.figure()\n",
     "plt.plot(x, np.exp(np.interp(x, knots, optimized_logD)), label='Optimized D')\n",
     "if generate:\n",
@@ -224,7 +199,6 @@
     "plt.xlabel('colvar q')\n",
     "plt.ylabel('Diffusion coefficient')\n",
     "plt.legend()\n",
-    "\n",
     "\n",
     "plot_gradient = False\n",
     "if plot_gradient:\n",
