Optimize by precomputing traj data

--- a/pyOptLE test.ipynb
+++ b/pyOptLE test.ipynb
@@ -30,116 +30,129 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98ffb68c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate = True\n",
+    "n = 100\n",
+    "N = 5000\n",
+    "    \n",
+    "# User needs to provide dt!\n",
+    "dt = 0.1\n",
+    "T = 300\n",
+    "\n",
+    "# format data from \"real\" simulation\n",
+    "filename = 'data_10ala/decaa_abf_500traj'\n",
+    "\n",
+    "auto_bounds = True\n",
+    "# qmin_user = 11\n",
+    "# qmax_user = 34\n",
+    "\n",
+    "n_knots = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "687aebf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load or generate data\n",
+    "\n",
+    "if generate:\n",
+    "    D = 0.5\n",
+    "    beta = 1\n",
+    "    V = optle.V_harm\n",
+    "    nablaV = optle.nablaV_harm\n",
+    "#     V = optle.V_dblwell\n",
+    "#     nablaV = optle.nablaV_dblwell\n",
+    "    q = optle.overdamped_Langevin(n, N, dt, beta, D, nablaV)\n",
+    "    f = np.zeros_like(q)\n",
+    "else:\n",
+    "    q, f = optle.load_traj(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6b008372-f097-475c-a53b-eccf93f6c4fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RT = 1.\n",
-    "beta = 1/RT\n",
+    "plot_samples = True\n",
+    "plot_traj = True\n",
+    "n_plots = 10\n",
     "\n",
-    "n_knots = 20\n",
+    "if plot_samples:\n",
+    "    plt.plot([qi.shape[0] for qi in q])\n",
+    "    plt.xlabel('Trajectory index')\n",
+    "    plt.ylabel('N. of pts per trajectory')\n",
     "\n",
-    "##############################\n",
-    "\n",
-    "generate = False\n",
-    "\n",
-    "if generate:\n",
-    "    dt = 0.1\n",
-    "    D = 0.5\n",
-    "    beta = 1\n",
-    "    n = 50\n",
-    "    N = 1000\n",
-    "#     V = optle.harmonic_V\n",
-    "#     nablaV = optle.harmonic_nablaV\n",
-    "    V = optle.V_dblwell\n",
-    "    nablaV = optle.nablaV_dblwell\n",
-    "    q = optle.overdamped_Langevin(n, N, dt, beta, D, nablaV)\n",
-    "    f = np.zeros_like(q)\n",
-    "else:\n",
-    "    # format data from \"real\" simulation\n",
-    "    filename = 'data/'\n",
-    "    \n",
-    "    q, f = optle.load_traj(filename)\n",
-    "\n",
-    "plt.plot([qi.shape[0] for qi in q])\n",
-    "plt.xlabel('Trajectory index')\n",
-    "plt.ylabel('N. of pts per trajectory')\n"
+    "if plot_traj:\n",
+    "    plt.figure()\n",
+    "    stride = len(q) // n_plots\n",
+    "    if stride == 0:\n",
+    "        stride = 1\n",
+    "    for qi in q[::stride]:\n",
+    "        plt.plot(qi)\n",
+    "    plt.xlabel('t')\n",
+    "    plt.ylabel('q')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7cd8d4-c229-4238-8791-e36af619fdf6",
+   "id": "f3000419",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Precompute displacements\n",
-    "deltaq = [qi[1:] - qi[:-1] for qi in q]\n",
-    "# deltaq = np.array(deltaq, dtype=object)\n",
+    "# Create grid and initial parameter set\n",
     "\n",
     "epsilon = 1e-10\n",
-    "# Add margin for floating-point precision\n",
-    "qmin = min([np.min(qi) for qi in q]) - epsilon\n",
-    "qmax = max([np.max(qi) for qi in q]) + epsilon\n",
+    "qmin_data = min([np.min(qi) for qi in q]) - epsilon\n",
+    "qmax_data = max([np.max(qi) for qi in q]) + epsilon\n",
     "\n",
-    "# import multiprocessing\n",
-    "# num_processes = multiprocessing.cpu_count()\n",
+    "if auto_bounds:\n",
+    "    # Add margin for floating-point precision\n",
+    "    qmin = qmin_data\n",
+    "    qmax = qmax_data\n",
+    "else:\n",
+    "    assert qmin_user <= qmin_data, '%f > %f' % (qmin_user, qmin_data)\n",
+    "    assert qmax_user >= qmax_data, '%f < %f' % (qmax_user, qmax_data)\n",
+    "    qmin = qmin_user\n",
+    "    qmax = qmax_user\n",
+    "\n",
     "\n",
     "knots = np.linspace(qmin, qmax, n_knots)\n",
     "\n",
     "# Initial guess for the parameters: zero free energy gradient, constant D = 1\n",
-    "initial_params = np.concatenate((np.zeros(n_knots), np.zeros(n_knots) + 1.))\n"
+    "initial_params = np.concatenate((np.zeros(n_knots), np.zeros(n_knots) + 1.))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf6bca6-5f3d-4506-b35a-c58fdf73e93f",
+   "id": "a23065d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%autoreload"
+    "# Optimize with debiasing\n",
+    "\n",
+    "result, hist = optle.optimize_model(initial_params, knots, q, f, dt, T = T)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa77662-5060-4300-afd8-6bce778551db",
+   "id": "91c7b20b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "print(optle.objective_order1_debiased(initial_params, knots, q, deltaq, dt, beta, f))\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "# Re-optimize without debiasing\n",
     "\n",
-    "start_time = time.time()\n",
-    "print(optle.objective_order1_debiased(initial_params, knots, q, deltaq, dt, beta, f))\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "362d4606",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def history(res):\n",
-    "    history.opt.append(res)\n",
-    "    if history.nsteps%100 == 0:\n",
-    "        print('Step', history.nsteps, np.square(res).sum())\n",
-    "    history.nsteps += 1\n",
-    "\n",
-    "history.opt = list()\n",
-    "history.nsteps = 0\n",
-    "\n",
-    "start_time = time.time()\n",
-    "# Minimize the objective function using L-BFGS-B algorithm\n",
-    "result = minimize(optle.objective_order1_debiased, initial_params,  args=(knots, q, deltaq, dt, beta, f), jac=True, method='L-BFGS-B', callback=history)\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-    "\n",
-    "print(result.nit, result.message)"
+    "result_nb, hist_nb = optle.optimize_model(initial_params, knots, q, f = None, dt = dt, T = T)"
    ]
   },
   {
@@ -149,21 +162,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimized_params = result.x\n",
-    "\n",
-    "# Extract the optimized knots and coefficients\n",
-    "optimized_knots = knots\n",
-    "optimized_G = optimized_params[:n_knots]\n",
-    "optimized_logD = optimized_params[n_knots:]\n",
-    "\n",
+    "# Smoother interpolation for plotting\n",
     "interp_factor = 10\n",
     "\n",
     "# Fencepost theorem aplied forward and then backward\n",
     "n_discr_points = interp_factor * (len(knots) - 1) + 1\n",
     "x = np.linspace(qmin, qmax, n_discr_points)\n",
     "\n",
+    "optimized_params = result.x\n",
+    "optimized_G = optimized_params[:n_knots]\n",
+    "optimized_logD = optimized_params[n_knots:]\n",
     "\n",
-    "%matplotlib inline\n",
+    "optimized_params_nb = result_nb.x\n",
+    "optimized_G_nb = optimized_params_nb[:n_knots]\n",
+    "optimized_logD_nb = optimized_params_nb[n_knots:]\n",
+    "\n",
+    "\n",
+    "# Integral of linear interpolation\n",
+    "\n",
+    "predicted = optle.piecewise_linear_int(x, knots, optimized_G)\n",
+    "predicted_nb = optle.piecewise_linear_int(x, knots, optimized_G_nb)\n",
+    "\n",
+    "\n",
     "# Plot the original data and the optimized spline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -171,14 +191,13 @@
     "# FE = -RT * np.log(counts)\n",
     "# FE -= np.min(FE)\n",
     "# plt.stairs(FE, bins, label='FE from histogram')\n",
+    "R = 0.00198720425864 # kcal/mol\n",
+    "RT = R * T\n",
     "plt.stairs(-RT*(np.log(counts)-np.max(np.log(counts))), bins, label='\\\"Free energy\\\" from histogram')\n",
     "\n",
+    "plt.plot(x, predicted, label='Optimized free energy (debiased)', marker='.', markevery=interp_factor)\n",
+    "plt.plot(x, predicted_nb, label='Optimized free energy (not debiased)', marker='.', markevery=interp_factor)\n",
     "\n",
-    "# TODO reuse this for ABF\n",
-    "# Integral of linear interpolation\n",
-    "\n",
-    "predicted = optle.piecewise_linear_int(x, knots, optimized_G)\n",
-    "plt.plot(x, predicted, label='Optimized free energy')\n",
     "plt.xlabel('colvar q')\n",
     "plt.ylabel('Free energy')\n",
     "\n",
@@ -186,107 +205,21 @@
     "    plt.plot(x, V(x) - np.min(V(x)), label='True potential')\n",
     "\n",
     "# Ad hoc bc we know this is a double well\n",
-    "plt.plot(x, optle.V_dblwell(x) - np.min(optle.V_dblwell(x)), label='Double well')\n",
+    "# plt.plot(x, optle.V_dblwell(x) - np.min(optle.V_dblwell(x)), label='Ideal double well')\n",
     "\n",
     "plt.legend()\n",
     "\n",
     "    \n",
     "    \n",
     "plt.figure()\n",
-    "plt.plot(x, np.exp(np.interp(x, knots, optimized_logD)), label='Optimized D')\n",
+    "plt.plot(x, np.exp(np.interp(x, knots, optimized_logD)), label='Optimized D (debiased)')\n",
+    "plt.plot(x, np.exp(np.interp(x, knots, optimized_logD_nb)), label='Optimized D (not debiased)')\n",
+    "\n",
     "if generate:\n",
     "    plt.plot([qmin, qmax], [D, D], label='True D')\n",
     "plt.xlabel('colvar q')\n",
     "plt.ylabel('Diffusion coefficient')\n",
     "plt.legend()\n",
-    "\n",
-    "plot_gradient = False\n",
-    "if plot_gradient:\n",
-    "    plt.figure()\n",
-    "    predicted_nablaV = np.interp(x, knots, optimized_G)\n",
-    "    plt.scatter(knots, optimized_G, label='Optimized grad G')\n",
-    "    plt.plot(x, predicted_nablaV, label='Optimized gradient')\n",
-    "    if generate:\n",
-    "        plt.plot(x, np.interp(x, knots, nablaV(knots)), label='True gradient')\n",
-    "    plt.xlabel('colvar q')\n",
-    "    plt.ylabel('Diffusion coefficient')\n",
-    "    plt.legend()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7aee6c75-1e02-4fd3-b6b9-fca7fdf8920a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_bias = [np.zeros_like(fi) for fi in f]\n",
-    "\n",
-    "\n",
-    "history.opt = list()\n",
-    "history.nsteps = 0\n",
-    "\n",
-    "start_time = time.time()\n",
-    "# Minimize the objective function using L-BFGS-B algorithm\n",
-    "result = minimize(optle.objective, initial_params,  args=(q, deltaq, no_bias, knots), jac=True, method='L-BFGS-B', callback=history)\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-    "\n",
-    "print(result.nit, result.message)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a847bdc4-641d-45a8-a78a-7e6de83b56c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimized_params = result.x\n",
-    "\n",
-    "# Extract the optimized knots and coefficients\n",
-    "optimized_knots = knots\n",
-    "optimized_G = optimized_params[:n_knots]\n",
-    "optimized_logD = optimized_params[n_knots:]\n",
-    "\n",
-    "interp_factor = 10\n",
-    "\n",
-    "# Fencepost theorem aplied forward and then backward\n",
-    "n_discr_points = interp_factor * (len(knots) - 1) + 1\n",
-    "x = np.linspace(qmin, qmax, n_discr_points)\n",
-    "\n",
-    "\n",
-    "%matplotlib inline\n",
-    "# Plot the original data and the optimized spline\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "counts, bins = np.histogram(np.concatenate(q), bins=40)\n",
-    "# FE = -RT * np.log(counts)\n",
-    "# FE -= np.min(FE)\n",
-    "# plt.stairs(FE, bins, label='FE from histogram')\n",
-    "plt.stairs(-RT*(np.log(counts)-np.max(np.log(counts))), bins, label='\\\"Free energy\\\" from histogram')\n",
-    "\n",
-    "\n",
-    "# TODO reuse this for ABF\n",
-    "# Integral of linear interpolation\n",
-    "\n",
-    "predicted = optle.piecewise_linear_int(x, knots, optimized_G)\n",
-    "plt.plot(x, predicted, label='Optimized free energy')\n",
-    "plt.xlabel('colvar q')\n",
-    "plt.ylabel('Free energy')\n",
-    "plt.legend()\n",
-    "\n",
-    "if generate:\n",
-    "    plt.scatter(x, V(x), label='True potential')\n",
-    "    plt.legend()\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(x, np.exp(np.interp(x, knots, optimized_logD)), label='Optimized D')\n",
-    "if generate:\n",
-    "    plt.plot([qmin, qmax], [D, D], label='True D')\n",
-    "plt.xlabel('colvar q')\n",
-    "plt.ylabel('Diffusion coefficient')\n",
-    "plt.legend()\n",
-    "\n",
     "\n",
     "plot_gradient = False\n",
     "if plot_gradient:\n",
@@ -305,6 +238,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74e0849e-3141-40f8-b895-f435fc4fe565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(optimized_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "310abc79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traj = optle.preprocess_traj(q, knots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68629443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b, c = traj[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446bceb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optle.check_gradient(optle.objective_order1_debiased, q, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "285ba27e",
    "metadata": {},
    "outputs": [],
    "source": []
