Enable loading several trajectory files

--- a/pyOptLE test.ipynb
+++ b/pyOptLE test.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate = True\n",
+    "generate = False\n",
     "n = 100\n",
     "N = 5000\n",
     "    \n",
@@ -43,13 +43,13 @@
     "T = 300\n",
     "\n",
     "# format data from \"real\" simulation\n",
-    "filename = 'data_10ala/decaa_abf_500traj'\n",
+    "filenames = ['data_10ala/decaa_abf_500traj', 'data_10ala/decaa_abmd_500traj', 'data_10ala/decaa_nobias_500traj']\n",
     "\n",
     "auto_bounds = True\n",
     "# qmin_user = 11\n",
     "# qmax_user = 34\n",
     "\n",
-    "n_knots = 10"
+    "n_knots = 30"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "    q = optle.overdamped_Langevin(n, N, dt, beta, D, nablaV)\n",
     "    f = np.zeros_like(q)\n",
     "else:\n",
-    "    q, f = optle.load_traj(filename)"
+    "    q, f = optle.load_traj(filenames)"
    ]
   },
   {
@@ -221,7 +221,7 @@
     "plt.ylabel('Diffusion coefficient')\n",
     "plt.legend()\n",
     "\n",
-    "plot_gradient = False\n",
+    "plot_gradient = True\n",
     "if plot_gradient:\n",
     "    plt.figure()\n",
     "    predicted_nablaV = np.interp(x, knots, optimized_G)\n",
