Clear nb  output, add graph

--- a/pyOptLE test.ipynb
+++ b/pyOptLE test.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate = False\n",
-    "n = 100\n",
-    "N = 5000\n",
+    "generate = True\n",
+    "n = 1000\n",
+    "N = 200\n",
     "    \n",
     "# User needs to provide dt!\n",
     "dt = 0.1\n",
@@ -59,15 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load or generate data\n",
+    "# Load trajectory or generate synthetic data in 1D overdamped simulation\n",
     "\n",
     "if generate:\n",
     "    D = 0.5\n",
-    "    beta = 1\n",
-    "    V = optle.V_harm\n",
-    "    nablaV = optle.nablaV_harm\n",
-    "#     V = optle.V_dblwell\n",
-    "#     nablaV = optle.nablaV_dblwell\n",
+    "    R = 0.00198720425864 # kcal/mol\n",
+    "    RT = R * T\n",
+    "    beta = 1 / RT\n",
+    "#     V = optle.V_harm\n",
+    "#     nablaV = optle.nablaV_harm\n",
+    "    V = optle.V_dblwell\n",
+    "    nablaV = optle.nablaV_dblwell\n",
     "    q = optle.overdamped_Langevin(n, N, dt, beta, D, nablaV)\n",
     "    f = np.zeros_like(q)\n",
     "else:\n",
@@ -232,16 +234,6 @@
     "    plt.xlabel('colvar q')\n",
     "    plt.ylabel('Diffusion coefficient')\n",
     "    plt.legend()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74e0849e-3141-40f8-b895-f435fc4fe565",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(optimized_params)"
    ]
   },
   {
